<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/borders"
    android:layout_gravity="top"
    android:orientation="vertical"
    tools:context="com.example.tictactoe.FinalResults" >
    
    <TextView
        android:id="@+id/gameOverTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:text="@string/game_over"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/winnerTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:text="@string/game_over" 
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="30sp"/>
    
    <TextView
        android:id="@+id/startOverTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/start_over" 
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"/>
	
    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal" >
     
	     <ImageButton
	        android:id="@+id/newGameButton"
	       	android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:gravity="center_horizontal"
	        android:background="@null"
	        android:contentDescription="@string/desc"
	        android:src="@drawable/ic_newgame" />
	     
	     <ImageButton
	        android:id="@+id/quitButton"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:gravity="center_horizontal"
	        android:background="@null"
	        android:contentDescription="@string/desc"
	        android:src="@drawable/ic_quit" />
	     
	</LinearLayout>
	
	<LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal" >
	     
	    <TextView
	        android:id="@+id/newGameTextView"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:gravity="center_horizontal"
	        android:text="@string/new_game"
	        android:textColor="@color/white" />
	    
	    <TextView
	        android:id="@+id/quitTextView"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:gravity="center_horizontal"
	        android:text="@string/quit"
	        android:textColor="@color/white" />
	    
	</LinearLayout>

</LinearLayout>
